create an advice generating app

--- a/advice-generator/index.html
+++ b/advice-generator/index.html
@@ -39,7 +39,7 @@
       <div class="advice-card">
         <h4>advice #45</h4>
 
-        <h1>
+        <h1 class="advice">
           &ldquo;It is easy to situp and take notice, what's difficult is
           getting up and taking action.&rdquo;
         </h1>
